// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component RefreshButton RefreshButton should match snapshot 1`] = `
<button
  className="sc-AxjAm sc-AxirZ kQdOTh hidden"
  onClick={null}
/>
`;

exports[`component RefreshButton RefreshButton should match snapshot 2`] = `
<button
  className="sc-AxjAm sc-AxirZ kQdOTh visible"
  onClick={null}
/>
`;
